# Sleepstudy

./: .gitignore  .travis.yml  .travis.yml_old  CMakeLists.txt  README.md
HelperScripts/: startNClients
include/: CuTest.h  Server.h  debugFuncWrappers.h  mathFuncs.h  stringHelperFuncs.h  testSuites.h
src/: Makefile  build  client  client.c  fibo  fiboCalc.c  mathFuncs.c  mathServer  mathServer.c  mathServer.lst  startNClients  stringHelperFuncs.c
test/: AllTests.c  CMakeLists.txt  CuTest.c  DelayChecker_config.json  Makefile  startUpSomeClients.bat  test  testServerStartup_CuTest.c  testWithSleeps.c
